--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com</groupId>
 	<artifactId>reader</artifactId>
-	<version>0.0.1-beta</version>
+	<version>0.0.5-beta</version>
 	<packaging>war</packaging>
 	<name>reader</name>
 	<description>Angular Java Spring</description>
@@ -36,6 +36,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.3.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
